ajout du titre du site

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <head>
     <meta charset="utf-8">
+    <!-- Warning : problème de Keyword (localisation...) -->
     <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
@@ -21,7 +22,8 @@
     <script src="./js/jquery.touchSwipe.js" defer></script>
     <script src="./js/gmaps.js"></script>
 
-    <title>.</title>
+    <!-- Warning : pas de titre page déclaré  : OK -->
+    <title>La chouette agence</title>
 
 
     <!-- Analytics -->
