--- a/page2.html
+++ b/page2.html
@@ -20,8 +20,9 @@
     <script src="./js/blocs.min.js"></script>
     <script src="./js/jqBootstrapValidation.js"></script>
     <script src="./js/formHandler.js"></script>
-    <title>page2</title>
 
+    <!-- Warning : pas de titre page déclaré  : OK -->
+    <title>La chouette agence</title>
 
     <!-- Analytics -->
 
