suppression des keywords en blackhat / suppression de la liste inutilisée

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <script src="./js/gmaps.js"></script>
 
     <!-- Warning : pas de titre page déclaré  : OK -->
-    <title>La chouette agence</title>
+    <title>La chouette agence - Accueil</title>
 
 
     <!-- Analytics -->
@@ -42,9 +42,9 @@
 
                 <nav class="navbar row">
                     <div class="navbar-header">
-                        <div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
+                        <!-- Warning : pas de titre page déclaré  : OK -->
                         <a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="paris web design logo agence web meilleure agence" height="40" /></a>
-                        <div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
+                        <!-- Warning : pas de titre page déclaré  : OK -->
                         <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -54,8 +54,7 @@
                             <li>
                                 <a href="index.html">Accueil</a>
                             </li>
-                            <li>
-                            </li>
+                            <!-- Warning : li vide : OK-->
                             <li>
                                 <a href="page2.html">page2 &gt;</a>
                             </li>
@@ -252,9 +251,9 @@
                                     <a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
                                 </div>
                             </div>
-                            <div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
+                            <!-- Warning : Keywords en black hat  : OK -->
                         </div>
-
+                        <!-- Warning : lien artificiels à supprimer  : OK -->
                     </div>
                 </div>
             </div>
