--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 
                 <nav class="navbar row">
                     <div class="navbar-header">
-                        <!-- Warning : pas de titre page déclaré  : OK -->
+                        <!-- Warning : Keywords en black hat  : OK -->
                         <a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="paris web design logo agence web meilleure agence" height="40" /></a>
-                        <!-- Warning : pas de titre page déclaré  : OK -->
+                        <!-- Warning : Keywords en black hat  : OK -->
                         <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -96,9 +96,10 @@
                         <div class="text-center">
                             <span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
                         </div>
-                        <h3 class="mg-md text-center">
+                        <!-- Warning : Hiérarchie des titres non respectée (h3) = passage en h2  : OK -->
+                        <h2 class="mg-md text-center">
                             Web design
-                        </h3>
+                        </h2>
                         <p class="text-center ">
                             Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
                         </p>
@@ -107,9 +108,10 @@
                         <div class="text-center">
                             <span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
                         </div>
-                        <h3 class="mg-md text-center">
+                        <!-- Warning : Hiérarchie des titres non respectée (h3) = passage en h2  : OK -->
+                        <h2 class="mg-md text-center">
                             &nbsp;Stratégie
-                        </h3>
+                        </h2>
                         <p class="text-center ">
                             Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
                         </p>
@@ -118,9 +120,10 @@
                         <div class="text-center">
                             <span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
                         </div>
-                        <h3 class="mg-md text-center">
+                        <!-- Warning : Hiérarchie des titres non respectée (h3) = passage en h2  : OK -->
+                        <h2 class="mg-md text-center">
                             Illustrations
-                        </h3>
+                        </h2>
                         <p class="text-center ">
                             Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
                         </p>
