modification des liens réseaux sociaux

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <!-- Warning : problème de Keyword (localisation...) -->
     <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
+    <!-- Warning : Description incomplète -->
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
@@ -56,7 +57,8 @@
                             </li>
                             <!-- Warning : li vide : OK-->
                             <li>
-                                <a href="page2.html">page2 &gt;</a>
+                                <!-- Warning : Nav non explicite (page 2), lien renommé : OK-->
+                                <a href="page2.html">Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -101,7 +103,7 @@
                             Web design
                         </h2>
                         <p class="text-center ">
-                            Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
+                            Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
                         </p>
                     </div>
                     <div class="col-sm-4">
@@ -110,7 +112,7 @@
                         </div>
                         <!-- Warning : Hiérarchie des titres non respectée (h3) = passage en h2  : OK -->
                         <h2 class="mg-md text-center">
-                            &nbsp;Stratégie
+                            Stratégie
                         </h2>
                         <p class="text-center ">
                             Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
@@ -163,7 +165,8 @@
             <div class="container bloc-lg">
                 <div class="row">
                     <div class="col-sm-12 text-center">
-                        <img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
+                        <!-- Warning : Image à remplacer par le texte correspondant  : OK -->
+                        <h2 class="mg-md text-center">La Chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.</h2>
                     </div>
                 </div>
                 <div class="row tight-width-whitespace portfolio-row">
@@ -234,24 +237,25 @@
                             La chouette agence - Agence web basée à Lyon.<br>
                         </p>
                         <div class="row row-no-gutters social">
+                            <!-- Warning : Lien des réseaux sociaux non déclarés  : OK -->
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+                                    <a class="social" href="https://twitter.com/?lang=fr"><span class="fa fa-twitter icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+                                    <a class="social" href="https://fr-fr.facebook.com/"><span class="fa fa-facebook icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+                                    <a class="social" href="https://dribbble.com/"><span class="fa fa-dribbble icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+                                    <a class="social" href="https://www.instagram.com/?hl=fr"><span class="fa fa-instagram icon-md"></span></a>
                                 </div>
                             </div>
                             <!-- Warning : Keywords en black hat  : OK -->
