--- a/page2.html
+++ b/page2.html
@@ -22,11 +22,11 @@
     <script src="./js/formHandler.js"></script>
 
     <!-- Warning : pas de titre page déclaré  : OK -->
-    <title>La chouette agence</title>
+    <title>La chouette agence - Contact</title>
 
     <!-- Analytics -->
 
-    <!-- Analytics END -->
+    <!-- Analytics EN -->
 
 </head>
 
@@ -49,8 +49,7 @@
                             <li>
                                 <a href="index.html">Accueil</a>
                             </li>
-                            <li>
-                            </li>
+                            <!-- Warning : li vide : OK -->
                             <li>
                                 <a href="page2.html">page2 &gt;</a>
                             </li>
@@ -136,24 +135,25 @@
                             La chouette agence - Agence web basée à Lyon.<br>
                         </p>
                         <div class="row row-no-gutters social">
+                            <!-- Warning : Lien des réseaux sociaux non déclarés  : OK -->
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+                                    <a class="social" href="https://twitter.com/?lang=fr"><span class="fa fa-twitter icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+                                    <a class="social" href="https://fr-fr.facebook.com/"><span class="fa fa-facebook icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+                                    <a class="social" href="https://dribbble.com/"><span class="fa fa-dribbble icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+                                    <a class="social" href="https://www.instagram.com/?hl=fr"><span class="fa fa-instagram icon-md"></span></a>
                                 </div>
                             </div>
                         </div>
