--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
             <div class="container bloc-md">
                 <div class="row">
                     <div class="col-sm-12 text-center">
-                        <img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
+                        <!-- Warning : Image à remplacer par le texte correspondant  : OK -->
+                        <h2 class="mg-md text-center">La Chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.</h2>
                     </div>
                 </div>
                 <div class="row voffset-lg med-width-whitespace">
@@ -151,7 +152,7 @@
                         </h2>
                         <p class="text-center white">
                             Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre
-                            site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link"
+                            site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche.<br><br><a class="ltc-white bold-link"
                                 href="page2.html">Contactez notre équipe</a><br>
                         </p>
                     </div>
@@ -166,7 +167,7 @@
                 <div class="row">
                     <div class="col-sm-12 text-center">
                         <!-- Warning : Image à remplacer par le texte correspondant  : OK -->
-                        <h2 class="mg-md text-center">La Chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.</h2>
+                        <h2 class="mg-md text-center">Nous travaillons avec beaucoup de clients, voici nos réalisations.</h2>
                     </div>
                 </div>
                 <div class="row tight-width-whitespace portfolio-row">
