--- a/index.html
+++ b/index.html
@@ -134,8 +134,9 @@
                 </div>
                 <div class="row voffset-lg voffset">
                     <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-                        <img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />
-
+                        <!-- Warning : Image à remplacer par le texte correspondant  : OK -->
+                        <h2 class="mg-md text-center">La Chouette agence est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon.</h2>
+                        <h3>Maxime Guibard, PDG de À vos fourchettes</h3>
                     </div>
                 </div>
             </div>
