--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <!-- Warning : problème de Keyword (localisation...) -->
     <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
-    <!-- Warning : Description incomplète -->
-    <meta name="description" content="">
+    <!-- Warning : Description incomplète : OK -->
+    <meta name="description" content="La Chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
