conversion des images

--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
                             <li>
                                 <a href="index.html">Accueil</a>
                             </li>
-                            <!-- Warning : li vide : OK-->
+                            <!-- Warning : li vide -->
+                            <li>
+
+                            </li>
                             <li>
                                 <!-- Warning : Nav non explicite (page 2), lien renommé : OK-->
                                 <a href="page2.html">Contact</a>
