--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Warning : Description incomplète : OK -->
     <meta name="description" content="La Chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <link rel="shortcut icon" type="image/png" href="favicon.jpg">
+    <link rel="shortcut icon" type="image/jpg" href="favicon.jpg">
 
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -44,7 +44,7 @@
                 <nav class="navbar row">
                     <div class="navbar-header">
                         <!-- Warning : Keywords en black hat  : OK -->
-                        <a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="paris web design logo agence web meilleure agence" height="40" /></a>
+                        <a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.jpg" alt="paris web design logo agence web meilleure agence" height="40" /></a>
                         <!-- Warning : Keywords en black hat  : OK -->
                         <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
@@ -75,7 +75,7 @@
             <div class="container bloc-lg">
                 <div class="row tight-width-whitespace">
                     <div class="col-sm-12">
-                        <img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="La chouette agence, agence web paris, création logo paris" />
+                        <img src="img/logo.jpg" class="center-block image-resize-mode" width="100" alt="La chouette agence, agence web paris, création logo paris" />
                         <h1 class="text-center hero-bloc-text tc-white ">
                             La chouette agence.
                         </h1>
@@ -196,7 +196,7 @@
                 </div>
                 <div class="row tight-width-whitespace portfolio-row">
                     <div class="col-sm-6">
-                        <a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.bmp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur" /></a>
+                        <a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.bmp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur" /></a>
                         <h3 class="mg-md text-center">
                             Création d'un site internet pour un voyageur
                         </h3>
@@ -205,7 +205,7 @@
                         </p>
                     </div>
                     <div class="col-sm-6">
-                        <a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.bmp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
+                        <a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.bmp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
                         <h3 class="mg-md text-center">
                             Conception d'un site pour une agence de mariage
                         </h3>
