modification de la taille des textes

--- a/page2.html
+++ b/page2.html
@@ -52,7 +52,7 @@
                             </li>
                             <!-- Warning : li vide : OK -->
                             <li>
-                                <a href="page2.html">page2 &gt;</a>
+                                <a href="page2.html">Contact</a>
                             </li>
                         </ul>
                     </div>
