--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
             <div class="container bloc-lg">
                 <div class="row">
-                    <h2 class="mg-md text-center tc-white">
+                    <h2 class="mg-md text-center tc-white text-finalaccroche">
                         Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
                     </h2>
                     <div class="col-sm-12 text-center">
@@ -238,7 +238,7 @@
             <div class="container bloc-sm">
                 <div class="row">
                     <div class="col-sm-12">
-                        <p class="text-center white">
+                        <p class="text-center white title-text">
                             La chouette agence - Agence web basée à Lyon.<br>
                         </p>
                         <div class="row row-no-gutters social">
