--- a/page2.html
+++ b/page2.html
@@ -85,27 +85,24 @@
                     <div class="col-sm-6">
                         <form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
                             <div class="form-group">
-                                <label>
-							Nom
-						</label>
+                                <!--Warning : label form manquant : OK-->
+                                <label for="name">Nom</label>
                                 <input id="name" class="form-control" required />
                             </div>
                             <div class="form-group">
-                                <label>
-							Adresse email
-						</label>
+                                <!--Warning : label form manquant : OK-->
+                                <label for="email">Adresse e-mail</label>
                                 <input id="email" class="form-control" type="email" required />
                             </div>
                             <div class="form-group">
-                                <label>
-							Comment nous avez-vous connu ?
-						</label>
-                                <input class="form-control" type="email" required id="input_504" />
+                                <!--Warning : label form manquant : OK-->
+                                <label for="input_504">Comment nous avez-vous connu? </label>
+                                <input class="form-control" required id="input_504" />
                             </div>
                             <div class="form-group">
-                                <label>
-							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
-						</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+                                <!--Warning : label form manquant : OK-->
+                                <label for="message">Brief de votre projet (Ajoutez autant de détails que nécessaire)</label>
+                                <textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
                             </div>
                             <button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 						Envoyer
