--- a/page2.html
+++ b/page2.html
@@ -66,10 +66,10 @@
             <div class="container bloc-lg">
                 <div class="row">
                     <div class="col-sm-12">
-                        <h1 class="text-center hero-bloc-text tc-white">
+                        <h1 class="text-center hero-bloc-text tc-white txt-contact">
                             Parlons web design !
                         </h1>
-                        <p class="text-center mg-lg tc-white tight-width-whitespace">
+                        <p class="text-center mg-lg tc-white tight-width-whitespace txt-contact">
                             Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br> Parlez-nous de votre projet en complétant le formulaire ci-dessous.
                         </p>
                     </div>
@@ -129,7 +129,7 @@
             <div class="container bloc-sm">
                 <div class="row">
                     <div class="col-sm-12">
-                        <p class="text-center white">
+                        <p class="text-center white title-text">
                             La chouette agence - Agence web basée à Lyon.<br>
                         </p>
                         <div class="row row-no-gutters social">
