différé des scripts

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
 
     <script src="./js/jquery-2.1.0.min.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
-    <script src="./js/blocs.min.js"></script>
-    <script src="./js/jquery.touchSwipe.min.js" defer></script>
-    <script src="./js/gmaps.min.js"></script>
+    <script src="./js/bootstrap.min.js" async></script>
+    <script src="./js/blocs.min.js" async></script>
+    <script src="./js/jquery.touchSwipe.min.js" async></script>
+    <script src="./js/gmaps.min.js" async></script>
 
     <!-- Warning : pas de titre page déclaré  : OK -->
     <title>La chouette agence - Accueil</title>
