--- a/page2.html
+++ b/page2.html
@@ -13,12 +13,11 @@
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="style.min.css">
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 
 
     <script src="./js/jquery-2.1.0.min.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
-    <script src="./js/blocs.min.js"></script>
+    <script src="./js/bootstrap.min.js" async></script>
+    <script src="./js/blocs.min.js" async></script>
     <script src="./js/jqBootstrapValidation.min.js"></script>
     <script src="./js/formHandler.min.js"></script>
 
